# l3gd20

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
src/: characteristics.rs  i16x3.rs  lib.rs  reading.rs  sensor_data.rs  wrapper.rs
src/wrapper/: refcell.rs
